# mage

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  nob.c
scripts/linux/: build-debug.sh  build-release.sh  build.sh  setup-debug.sh  setup-release.sh  setup.sh
scripts/windows/: build-debug.bat  build-release.bat  build.bat  setup-debug.bat  setup-release.bat  setup.bat
src/: asset_manager.c  asset_manager.h  common.h  da.h  game_state.h  h.h  main.c  player.c  player.h  sprite.c  sprite.h  vec2.h
